--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,9 @@
 				<configuration>
 					<format>ALL</format>
 					<failBuildOnCVSS>8</failBuildOnCVSS>
+					<suppressionFiles>
+						<suppressionFile>project-suppression.xml</suppressionFile> 
+					</suppressionFiles>
 					<!-- fail the build for CVSS greater than or equal to 5 -->
 					<!-- 
 							use internal mirroring of CVE contents 
